//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  firstName String
  lastName String
  role EnumUserRole [not null]
  posts post [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table post {
  id String [pk]
  published Boolean [not null]
  title String [not null]
  content String
  author user
  authorId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table customer {
  id String [pk]
  email String
  firstName String
  lastName String
  phone String
  invoices invoice [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
}

Table product {
  id String [pk]
  description String
  name String
  price Float
  invoiceItems invoice_item [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
}

Table invoice {
  id String [pk]
  invoiceNumber String
  dueDate DateTime
  invoiceDate DateTime
  status EnumInvoiceStatus
  totalAmount String
  customerId String
  customer customer
  invoiceItems invoice_item [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
}

Table invoice_item {
  id String [pk]
  lineTotal Float
  quantity Int
  unitPrice Float
  invoiceId String
  invoice invoice
  productId String
  product product
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
}

Enum EnumUserRole {
  ADMIN
  USER
}

Enum EnumInvoiceStatus {
  Paid
  Unpaid
  Pending
}

Ref: post.authorId > user.id

Ref: invoice.customerId > customer.id

Ref: invoice_item.invoiceId > invoice.id

Ref: invoice_item.productId > product.id